--- a/Cyble/Cyble/src/main/res/values/strings.xml
+++ b/Cyble/Cyble/src/main/res/values/strings.xml
@@ -19,5 +19,6 @@
     <string name="menu_connect">Connect</string>
     <string name="unknown_service">Unknown Service</string>
     <string name="unknown_characteristic">Unknown Characteristic</string>
+    <string name="scanning">Scanning...</string>
 
 </resources>
