--- a/Cyble/Cyble/src/main/res/values/strings.xml
+++ b/Cyble/Cyble/src/main/res/values/strings.xml
@@ -20,5 +20,6 @@
     <string name="unknown_service">Unknown Service</string>
     <string name="unknown_characteristic">Unknown Characteristic</string>
     <string name="scanning">Scanning...</string>
+    <string name="subscribe">Subscribe</string>
 
 </resources>
